fixed image dragging issue on firefox

--- a/msmincredibox/gameStyle.css
+++ b/msmincredibox/gameStyle.css
@@ -24,6 +24,7 @@ body
     -ms-user-select: none;
     overflow: hidden;
     touch-action: manipulation;
+    pointer-events: none;
 }
 
 h1
@@ -147,6 +148,7 @@ h1
     aspect-ratio: 1 / 1;
     flex: 1 1 0;
     user-select: none;
+    pointer-events: all;
 }
 
 :nth-child(n+11 of .egg)
@@ -166,6 +168,7 @@ h1
 .egg.disabled
 {
     opacity: 50%;
+    pointer-events: none;
 }
 
 .egg:not(.debug) > p
@@ -177,6 +180,7 @@ h1
 {
     width: 100%;
     height: 100%;
+    pointer-events: none;
 }
 
 .mouseEgg
@@ -315,6 +319,7 @@ h1
     margin: auto auto;
     font-size: 2vw;
     filter: grayscale(80%) drop-shadow(0 0 5px black);
+    pointer-events: all;
 }
 
 .trackButton > p
@@ -362,6 +367,7 @@ h1
     aspect-ratio: 1 / 1;
     margin: auto auto;
     filter: brightness(0) saturate(100%) invert(22%) sepia(2%) saturate(24%) hue-rotate(325deg) brightness(89%) contrast(83%) drop-shadow(0 0 5px black); /* dark gray */
+    pointer-events: all;
 }
 
 .monsterButton:hover, .pauseButton:hover, .playScreen > img:hover
